Fix dark mode.

--- a/static/src/uu/index.scss
+++ b/static/src/uu/index.scss
@@ -9,6 +9,9 @@
         --bs-breadcrumb-divider-color: var(--bs-gray-alt2);
         --bs-breadcrumb-item-active-color: var(--bs-gray-alt);
     }
+    .breadcrumb-container {
+        background-color: var(--bs-tertiary-bg);
+    }
 
     /* File browser rows */
     .browse, .deposit-delete, .page-link, .system-metadata-items, .name {
